Fix wrap bug of cards list
After this change when the width of the page is shrinked down, the cards list elements will be correctly wrapped

--- a/style/style.css
+++ b/style/style.css
@@ -64,6 +64,7 @@ p {
 }
 .cards {
     display: inline-flex;
+    flex-wrap: wrap;
     padding-left: 30px;
     margin: 20px 0px 36px 0px;
 }
